crates/cadenza-compiler/test-data/semantics/compound-types-error-wrong-field-type.expected
error: type mismatch in struct field
 --> test.cdz:2:13
  |
2 | Point { x = "hello", y = 20 }
  |             ^^^^^^^ expected Integer, found String
  |
  = note: field `x` requires type Integer