crates/cadenza-compiler/test-data/semantics/compound-types-error-wrong-field-type.cdz
struct Point { x = Integer, y = Integer }
Point { x = "hello", y = 20 }